sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/BG_Library_Entry__c.object-meta.xml
<CustomObject>
    <description>Since a Board Game can be used in Many Events and Events can Have Many Board Games, this Object is used to Join the two Objects together</description>
    <label>Board Game Library Entry</label>
    <nameField>
        <displayFormat>BGLE-{000}</displayFormat>
        <label>Library Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Game Library Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>