sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Average_Time_Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_Checked_Out__c</fullName>
    <formula>Total_Min_Checked_Out__c /  Total_Completed_Check_Outs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Time Checked Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>