sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/BGG_Id__c.field-meta.xml
<CustomField>
    <fullName>BGG_Id__c</fullName>
    <formula>Board_Game__r.BGG_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BGG Id</label>
    <type>Text</type>
</CustomField>