sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Board_Game__c.field-meta.xml
<CustomField>
    <fullName>Board_Game__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Board Game</label>
    <referenceTo>Board_Game__c</referenceTo>
    <relationshipLabel>Event Board Games</relationshipLabel>
    <relationshipName>Event_Board_Games</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>