sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Board_Game_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Board_Game_Image_URL__c</fullName>
    <formula>Board_Game__r.Image_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Game Image URL</label>
    <type>Text</type>
</CustomField>