sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/BoardGameName__c.field-meta.xml
<CustomField>
    <fullName>BoardGameName__c</fullName>
    <formula>Board_Game__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BoardGameName</label>
    <type>Text</type>
</CustomField>