sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Board Games</relationshipLabel>
    <relationshipName>Event_Board_Games</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>