sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Event_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Logo_URL__c</fullName>
    <formula>Event__r.Event_Image_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Logo URL</label>
    <type>Text</type>
</CustomField>