sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Link_to_Collection_Geeklist__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Collection_Geeklist__c</fullName>
    <formula>IF(NOT(ISBLANK(Source__c)),
  IF( Source_Type__c == &apos;Collection&apos;,  
    HYPERLINK(&quot;https://boardgamegeek.com/collection/user/&quot;+Source__c, Source__c +&quot;&apos;s Collection&quot;, &apos;_blank&apos;),
    IF( Source_Type__c == &apos;GeekList&apos;, HYPERLINK(&apos;https://boardgamegeek.com/geeklist/&apos;+Source__c, &apos;GeekList: &apos;+Source__c, &apos;_blank&apos;),&apos;&apos;)
  ),
&apos;&apos;)</formula>
    <label>Link to Collection/Geeklist</label>
    <type>Text</type>
</CustomField>