sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Link_to_Game_on_BoardGameGeek__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Game_on_BoardGameGeek__c</fullName>
    <formula>Board_Game__r.Link_to_BGG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Game on BoardGameGeek</label>
    <type>Text</type>
</CustomField>