sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Num_of_Copies__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Copies__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Total Number of Copies that can be checked out from the Event</description>
    <inlineHelpText>Total Number of Copies that can be checked out from the Event</inlineHelpText>
    <label># of Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>