sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Collection Name or Geeklist ID imported From</description>
    <inlineHelpText>Collection Name or Geeklist ID imported From</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>