sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Type of Import: Collection or Geek List</description>
    <inlineHelpText>Type of Import: Collection or Geek List</inlineHelpText>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>