sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Num_of_Copies__c &gt; 0, IF(Total_Available__c &gt; 0, &quot;Available&quot;, &quot;Checked Out&quot;), &quot;No Longer Available&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>