sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Total_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Available__c</fullName>
    <description>Total Copies - Total Checked Out</description>
    <formula>Num_of_Copies__c - Total_Currently_Checked_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>