sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Total_Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Checked_Out__c</fullName>
    <description>Rollup Summary of all of the Open Checkout Logs for this Board Game for this Event</description>
    <inlineHelpText>Rollup Summary of all of the Open Checkout Logs for this Board Game for this Event</inlineHelpText>
    <label>Total Checked Out</label>
    <summaryFilterItems>
        <field>BG_Checkout_Log__c.Check_In_Time__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>BG_Checkout_Log__c.BG_Library_Entry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>