sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Total_Completed_Check_Outs__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Check_Outs__c</fullName>
    <label>Total Completed Check Outs</label>
    <summaryFilterItems>
        <field>BG_Checkout_Log__c.Check_In_Time__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>BG_Checkout_Log__c.BG_Library_Entry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>