sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Total_Min_Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Min_Checked_Out__c</fullName>
    <label>Total Min Checked Out</label>
    <summarizedField>BG_Checkout_Log__c.Total_Check_Out_Time_Value__c</summarizedField>
    <summaryFilterItems>
        <field>BG_Checkout_Log__c.Check_In_Time__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>BG_Checkout_Log__c.BG_Library_Entry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>