sfdx-source/fflib-working-examples/main/schema/objects/BG_Library_Entry__c/fields/Total_Times_Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Times_Checked_Out__c</fullName>
    <label>Total Times Checked Out</label>
    <summaryForeignKey>BG_Checkout_Log__c.BG_Library_Entry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>